# SundewCamera

./: .gitignore  LICENSE  README.md
cv_processor/: README.md  pyproject.toml  requirements.txt
cv_processor/src/cv_processor/: __init__.py  __main__.py  camera_client.py  cli.py  detection_serializer.py  hailo_infer_client.py  orchestrator.py
cv_processor/tests/: conftest.py  test_camera_client.py  test_detection_serializer.py  test_hailo_infer_client.py  test_orchestrator.py  test_smoke.py
docs/: architecture.md  businessCase.md
http_processor/: README.md  pyproject.toml
http_processor/src/http_processor/: __init__.py  app.py
http_processor/tests/: conftest.py  test_app.py
output_processor/: README.md  pyproject.toml  requirements.txt
output_processor/src/output_processor/: __init__.py  cli.py  orchestrator.py
output_processor/tests/: conftest.py  test_output_smoke.py  test_smoke.py
sundew_common/: README.md  pyproject.toml  requirements.txt
sundew_common/src/sundew_common/: __init__.py  ipc_client.py
sundew_common/tests/: conftest.py  test_ipc_client.py  test_version.py
